cross-platform safe

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,15 +1,23 @@
 cmake_minimum_required(VERSION 3.30)
 project(TaskTracker)
 
+# Set C++ standard
 set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
+# Use static runtime for Visual Studio on Windows
+if (MSVC)
+    set(CMAKE_MSVC_RUNTIME_LIBRARY "MultiThreaded$<$<CONFIG:Debug>:Debug>")
+endif()
 
-# Include src
+# Include headers from include/
 include_directories(include)
 
 # Main executable
-add_executable(task_manager main.cpp
-        src/task_utils.cpp)
+add_executable(task_manager
+        main.cpp
+        src/task_utils.cpp
+)
 
 # GoogleTest Setup
 include(FetchContent)
@@ -17,10 +25,11 @@ FetchContent_Declare(
         googletest
         URL https://github.com/google/googletest/archive/release-1.12.1.zip
 )
-# For Windows: Prevent overriding the parent project's compiler/linker settings
+# Prevent GoogleTest from overriding MSVC settings
 set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
 FetchContent_MakeAvailable(googletest)
 
+# Enable testing support
 enable_testing()
 
 # Test executable
@@ -31,6 +40,6 @@ add_executable(task_tests
 target_include_directories(task_tests PRIVATE include)
 target_link_libraries(task_tests gtest_main)
 
+# Register tests
 include(GoogleTest)
 gtest_discover_tests(task_tests)
-
